Replace String.format(str, args) to str.formatted(args)
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>